# Lite-SEER-AD

./: .dockerignore  .gitignore  .zenodo.json  CITATION.cff  DATASETS.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  REPRODUCE.md  environment.yml  evaluate.py  infer.py  mine_hard_negatives.py  pyproject.toml  pytest.ini  release_links.template.json  release_metadata.template.json  requirements-lock.txt  requirements.txt  submission_metadata.template.json  train_diffusion.py  train_feature_prior.py  train_hn_sev.py  train_lc_rds.py  visualize.py
LITE-SEER-AD-idea/: Lite-SEER-AD_全文件整合总纲与SCI一区发表路线_2026.md  deep-research-report.md
artifacts/: manifest.json  predictions_manifest.json
baselines/: README.md  __init__.py  official_sources.json  official_sources.py  registry.py  run_baseline.py
configs/: mpdd.yaml  mvtec.yaml  mvtec_ad2.yaml  visa.yaml
docs/: claim_freeze_2026_06_21.md  current_stage_and_next_plan_zh.md  diffusionad_reproduction_status_zh.md  feature_first_evidence_summary.md  feature_first_execution_record_zh.md  full_test_completion_report_zh.md  full_test_execution_plan_zh.md  implementation_map.md  lite_seer_ad_completion_metrics_summary_zh.md  literature_matrix.md  mvtec_ad2_leaderboard_template.json  mvtec_ad2_official_result_template.json  mvtec_ad2_upload_status_zh.md  paper_evidence_summary.md  paper_protocol.md  pixel_threshold_resolution_zh.md  repository_inventory_zh.md  results_limitations_draft.md  reviewer_faq.md  submission_reproducibility_checklist.md  submission_statement_placeholders.md
paper/: manuscript.md  references.bib  (+1 more)
(+234 files in other folders)
