[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-seer-ad"
version = "0.1.0"
description = "Label-free feature-first industrial anomaly localization with regional verification audits."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3",
    "scikit-image>=0.24",
    "scipy>=1.11",
    "tqdm>=4.66",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["seer_ad_v2*", "baselines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = [
    ".git",
    ".pytest_cache",
    "runs",
    "submissions",
    "tables",
    "third_party",
]
